--- a/src/app/common/main-nav/main-nav.component.html
+++ b/src/app/common/main-nav/main-nav.component.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#envios">Envios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/empresas']">Empresas</a>
+          <a class="nav-link " [routerLink]="['/clientes']">Clientes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/proyectos']">Proyectos</a>
@@ -29,6 +29,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/tienda']">Tienda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/carrito']">Carrito</a>
         </li>
       </ul>
     </div>
