--- a/src/app/pages/proveedores/proveedores.component.html
+++ b/src/app/pages/proveedores/proveedores.component.html
@@ -1,22 +1,45 @@
 <header id="page-header">
   <div class="container">
-    <h1>Proovedores</h1>
+    <h1>Proveedores</h1>
     <p>{{ message }}</p>
   </div>
 </header>
 <section class="padded">
   <div class="container">
+    <div class="mb-3">
+      <label class="form-label" for="">Buscar empresa</label>
+      <input class="form-control" type="text" [(ngModel)]="proveedoresFilter.nombreempresa"
+      placeholder="Escriba el nombre de la empresa a buscar">
+    </div>
     <table class="table table-bordered table-hover">
       <thead>
-        <th>Empresa</th>
-        <th>Contacto</th>
-        <th>Cargo</th>
-        <th>Pais</th>
-        <th>Ciudad</th>
-        <th>Teléfono</th>
+        <th (click)="setOrder('nombreempresa')" [class.order-active]="order==='nombreempresa'">
+          <span [hidden]="!reversa"><i class="bi bi-chevron-down"></i></span>
+          <span [hidden]="reversa"><i class="bi bi-chevron-up"></i></span>
+          Empresa</th>
+        <th (click)="setOrder('nombrecontacto')" [class.order-active]="order==='nombrecontacto'">
+          <span [hidden]="!reversa"><i class="bi bi-chevron-down"></i></span>
+          <span [hidden]="reversa"><i class="bi bi-chevron-up"></i></span>
+          Contacto</th>
+        <th (click)="setOrder('cargocontacto')" [class.order-active]="order==='cargocontacto'">
+          <span [hidden]="!reversa"><i class="bi bi-chevron-down"></i></span>
+          <span [hidden]="reversa"><i class="bi bi-chevron-up"></i></span>
+          Cargo</th>
+        <th (click)="setOrder('pais')" [class.order-active]="order==='pais'">
+          <span [hidden]="!reversa"><i class="bi bi-chevron-down"></i></span>
+          <span [hidden]="reversa"><i class="bi bi-chevron-up"></i></span>
+          Pais</th>
+        <th (click)="setOrder('ciudad')" [class.order-active]="order==='ciudad'">
+          <span [hidden]="!reversa"><i class="bi bi-chevron-down"></i></span>
+          <span [hidden]="reversa"><i class="bi bi-chevron-up"></i></span>
+          Ciudad</th>
+        <th (click)="setOrder('telefono')" [class.order-active]="order==='telefono'">
+          <span [hidden]="!reversa"><i class="bi bi-chevron-down"></i></span>
+          <span [hidden]="reversa"><i class="bi bi-chevron-up"></i></span>
+          Teléfono</th>
       </thead>
       <tbody>
-        <tr *ngFor="let item of listaProveedores">
+        <tr *ngFor="let item of listaProveedores | filterBy: proveedoresFilter | orderBy: order : reversa | paginate: { itemsPerPage: 10, currentPage: p }">
           <td>{{item.nombreempresa}}</td>
           <td>{{item.nombrecontacto}}</td>
           <td>{{item.cargocontacto}}</td>
@@ -26,5 +49,6 @@
         </tr>
       </tbody>
     </table>
+    <pagination-controls (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
   </div>
 </section>
