--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -7,7 +7,8 @@
           <img src="https://servicios.campus.pe/{{item.imagenchica}}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{item.nombre}} <i class="bi bi-eye"></i></h5>
-            <p class="card-text">S/ {{item.precio | number: '.2' }} <i class="bi bi-basket"></i></p>
+            <p class="card-text">S/ {{item.precio | number: '.2' }}
+              <i class="bi bi-basket" (click)="agregarCarrito(item)"></i></p>
           </div>
         </div>
       </div>
